# fakts-next

./: .fakts_cache.json  CHANGELOG.md  README.md  RELEASING.md  TASKS.md  pyproject.toml
.github/workflows/: integration.yaml  release.yaml  tests.yaml
fakts_next/: __init__.py  challenge.py  errors.py  fakts.py  helpers.py  models.py  protocols.py  utils.py
fakts_next/cache/: file.py  nocache.py
fakts_next/cache/qt/: settings.py
fakts_next/contrib/rath/: aiohttp.py  graphql_ws.py  httpx.py  subscription_transport_ws.py
fakts_next/grants/: env.py
fakts_next/grants/io/: yaml.py
fakts_next/grants/io/qt/: yaml.py
fakts_next/grants/remote/: base.py  builders.py  models.py
fakts_next/grants/remote/claimers/: post.py  static.py
fakts_next/grants/remote/demanders/: device_code.py  redeem.py  retrieve.py  utils.py
fakts_next/grants/remote/demanders/qt/: qt_settings_token_store.py
fakts_next/grants/remote/discovery/: advertised.py  utils.py  well_known.py
fakts_next/grants/remote/discovery/qt/: selectable_beacon.py
tests/: conftest.py  test_cache.py  test_challenge.py  test_device_code.py  test_device_code_node.py  test_env.py  test_env_and_builders.py  test_fakts_behavior.py  test_helpers_and_utils.py  test_listen.py  test_qt.py  test_qt_settings_cache.py  test_redeem_code.py  test_remote_http.py  test_send_and_receive.py  test_yaml.py
tests/integration/: docker-compose.yml
tests/integration/configs/: lok.yaml  rekuest.yaml
