[project]
name = "fakts-next"
version = "4.1.0-rc.2"
description = "asynchronous service provider ( tailored to support dynamic client-server relations)"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>2",
    "koil>=3.3.1",
    "certifi>=2025.4.26",
    "aiohttp>=3.11.18",
    "oauthlib>=3.3.1",
]

[project.optional-dependencies]
qt = ["qtpy>=2.4.3"]
rath = ["rath>=3.0"]
crypto = ["cryptography>=42"]
# Installed inside the semantic-release Docker action so build_command has uv.
build = ["uv>=0.7.12"]

[project.urls]
Homepage = "https://github.com/jhnnsrs/fakts-next"
Repository = "https://github.com/jhnnsrs/fakts-next"
Documentation = "https://jhnnsrs.github.io/fakts-next"

[tool.uv]
dev-dependencies = [
    "cryptography>=42",
    "dokker>=2.5",
    "pyqt5>=5.15.11",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-qt>=4.4.0",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.1",
    "qtpy>=2.4.3",
    "basedpyright>=1.21",
]

[tool.basedpyright]
include = ["fakts_next"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "standard"

[tool.hatch.build.targets.sdist]
include = ["fakts_next"]

[tool.hatch.build.targets.wheel]
include = ["fakts_next"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
    "network: marks tests that require a network connection",
]


[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["fakts_next"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# The semantic-release GitHub Action runs in a Docker container without uv, so
# install it first (the `build` extra). After PSR bumps the version in
# pyproject.toml, re-sync just this package's entry in uv.lock and stage it so
# the release commit carries a consistent lock. $PACKAGE_NAME is injected by PSR.
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z. next -> prereleases X.Y.Z-rc.N. N.x -> maintenance.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false

# Keep the changelog focused on user-facing changes. These patterns only filter
# what's rendered — they do not affect version bumps.
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '^chore(?:\([^)]*\))?: ',
    '^ci(?:\([^)]*\))?: ',
    '^build(?:\([^)]*\))?: ',
    '^style(?:\([^)]*\))?: ',
    '^test(?:\([^)]*\))?: ',
    '^Merge ',
]
